src/objects/Legacy_AccountTeamMember__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_AccountAccessLevel__c</fullName>
        <label>Legacy AccountAccessLevel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_AccountId__c</fullName>
        <label>Legacy AccountId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_CaseAccessLevel__c</fullName>
        <label>Legacy CaseAccessLevel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ContactAccessLevel__c</fullName>
        <label>Legacy ContactAccessLevel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_OpportunityAccessLevel__c</fullName>
        <label>Legacy OpportunityAccessLevel</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_PhotoUrl__c</fullName>
        <label>Legacy PhotoUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_TeamMemberRole__c</fullName>
        <label>Legacy TeamMemberRole</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Title__c</fullName>
        <label>Legacy Title</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_UserId__c</fullName>
        <label>Legacy UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rebuilt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rebuilt?</label>
        <type>Checkbox</type>
    </fields>
    <label>Legacy AccountTeamMember</label>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Legacy AccountTeamMember Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legacy AccountTeamMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>